# rust-ccatoken

./: .gitignore
src/token/: evidence.rs
testdata/: CLAUDE.md  run.sh  rvstore.json  tastore.json
testdata/generate_cbor/: cbor2hex.py  cca_token_mock_p521.cbor  common.h  generate_cert_and_key.sh  mock_cca_sdk.c  mock_cca_sdk.sh  resign_platform_token.py
testdata/generate_cbor/mock_keys_p521/: ec_ca.crt  ec_ca.key  platform.crt  platform.key  platform_pkcs8.key
testdata/resign/: Cargo.toml
testdata/resign/src/: constants.rs  lib.rs  token.rs  token1.rs
