[package]
name = "mock_cca_sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
openssl = "0.10"
ciborium = "0.2"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
coset = "0.4.1"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1